--- a/proyectoABP/src/index.css
+++ b/proyectoABP/src/index.css
@@ -30,6 +30,19 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+
+  background-color: #ffffff;
+  color: #000000;
+}
+
+.dark {
+  background-color: #121212;
+  color: #ffffff;
+}
+
+body.dark {
+  background-color: #121212;
+  color: #ffffff;
 }
 
 h1 {
